# discourse-intelligence-engine

./: .gitignore  ARCHITECTURE.md  FUTURE_WORK.md  README.md  arc_data.json  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_V1.md  ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  ARCHITECTURE_V4.md  ARCHITECTURE_V5.md  ARCHITECTURE_V6.md  ARCHITECTURE_V7.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ColoredTextView.tsx  DiagramView.tsx  InputModeSelector.tsx  fallacyTypeColors.ts
src/discourse_engine/: __init__.py  __main__.py  llm_enhancement.py  main.py  scoring.py
src/discourse_engine/analyzers/: __init__.py  base.py  hidden_agenda.py  hidden_assumptions.py  logical_fallacy.py  modal_pronoun.py  satire.py  statistics.py  tone.py  trigger_profile.py
src/discourse_engine/api/: models.py  server.py
src/discourse_engine/lexicons/: authority_terms.json  fear_terms.json  identity_terms.json  implausible_policy_phrases.json  liberty_terms.json  necessity_modals.json  policy_advocacy_verbs.json  value_outcomes.json  value_terms.json
src/discourse_engine/models/: __init__.py  config.py  report.py
src/discourse_engine/utils/: __init__.py  text_utils.py  translation.py  youtube.py
src/discourse_engine/v3/: __init__.py  contradiction.py  (+5 more)
src/discourse_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_smoke.py  test_llm_enhancement.py  test_pipeline.py  test_satire.py  test_v3.py  test_youtube.py
(+24 files in other folders)
