[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discourse-intelligence-engine"
version = "0.1.0"
description = "NLP-driven system for analyzing structural logic and ideological patterns in language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Discourse Intelligence" }]
keywords = ["nlp", "discourse", "argumentation", "fallacy", "linguistics"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
llm = [
    "openai>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
